@@ -1,4 +1,9 @@
 
+Изменения в nginx 1.15.11                                         09.04.2019
+
+    *) Исправление: в директиве ssl_stapling_file на Windows.
+
+
 Изменения в nginx 1.15.10                                         26.03.2019
 
     *) Изменение: теперь при использовании имени хоста в директиве listen
