@@ -7,6 +7,13 @@
 
 <news name="nginx news" link="/" lang="en">
 
+<event date="2019-04-09">
+<para>
+<link doc="en/download.xml">nginx-1.15.11</link>
+mainline version has been released.
+</para>
+</event>
+
 <event date="2019-03-26">
 <para>
 <link doc="en/docs/njs/index.xml">njs-0.3.0</link>
